# AutoGo

./: .gitignore  AutoGo.pro  CMakeLists.txt  README.md  auto_go.pro  todo.md
.github/: make.yml
.github/workflows/: build.yml  make.yml
resources/: resources.qrc
resources/qml/: AutoGo.qml  Setting.qml  main.qml
src/: AutoGoInteractor.cpp  AutoGoInteractor.h  BoardAnalyzer.cpp  BoardAnalyzer.h  BoardData.cpp  BoardData.h  BoardInteractor.cpp  BoardInteractor.h  GameAnalyzer.cpp  GameAnalyzer.h  GameBoardHandler.cpp  GameBoardHandler.h  GameData.cpp  GameData.h  GameInteractor.cpp  GameInteractor.h  Global.cpp  Global.h  GoBoardItem.cpp  GoBoardItem.h  KatagoAnalysisInteractor.cpp  KatagoAnalysisInteractor.h  KatagoGTPInteractor.cpp  KatagoGTPInteractor.h  KatagoInteractor.cpp  KatagoInteractor.h  Settings.cpp  Settings.h  StoneData.cpp  StoneData.h  Util.cpp  Util.h  main.cpp
src/InteractiveInterface/: AdbHandle.cpp  AdbHandle.h  AdbInteractor.cpp  AdbInteractor.h  AdbScreencaptor.cpp  AdbScreencaptor.h  Controller.cpp  Controller.h  MaaController.cpp  MaaController.h  MumuHandle.cpp  MumuHandle.h  MumuScreencaptor.cpp  MumuScreencaptor.h  Screencaptor.cpp  Screencaptor.h
